# genScan

./: .gitignore  A105Data.xml  CMakeLists.txt  FRIB_BSM_2023.nocuts.xml  FRIB_BSM_2023.xml  FRIB_BSM_2024.xml  FRIB_BSM_2024_Co60.xml  ParScan.py  README.md  YAP_2024.xml  config.xml  configRD.xml  configmain.cpp  e21062_2.xml  e21069b_fp2.xml  e21069b_fp2.yaml  e21069b_fp2_proper.xml  scanmain.cpp  shortconfig.json  shortconfig.xml  shortconfig.yaml  spy.cxx
Core/include/: ArgParser.hpp  CompassData.hpp  CompassROOTUnpacker.hpp  ConfigXMLparser.hpp  GeneralConfigData.hpp  Unpacker.hpp  genscan.hpp
Core/source/: CMakeLists.txt  genscan.cxx
Core/src/: ArgParser.cpp  CMakeLists.txt  ConfigXMLparser.cpp  ConfigXMLparser.cxx  Unpacker.cpp  genscan.cpp  scanmain.cpp
core/: CMakeLists.txt
core/include/: AnalogCorrelator.hpp  ArgParser.hpp  BitDecoder.hpp  ChannelConfiguration.hpp  ChannelMap.hpp  ConfigParser.hpp  ConfigXMLparser.hpp  Correlator.hpp  GeneralStats.hpp  HistogramManager.hpp  JSONConfigParser.hpp  PhysicsData.hpp  RollingTriggerCorrelator.hpp  RollingWindowCorrelator.hpp  StatsTracker.hpp  TraceHelper.hpp  XMLConfigParser.hpp  YAMLConfigParser.hpp
core/src/: AnalogCorrelator.cpp  BitDecoder.cpp  CMakeLists.txt  ChannelMap.cpp  CompassROOTUnpacker.cpp  ConfigParser.cpp  Correlator.cpp  GeneralConfigData.cpp  HistogramManager.cpp  JSONConfigParser.cpp  PhysicsData.cpp  RollingTriggerCorrelator.cpp  RollingWindowCorrelator.cpp  StatsTracker.cpp  XMLConfigParser.cpp  YAMLConfigParser.cpp
parsers/: CMakeLists.txt
parsers/include/: DataBuffer.hpp
parsers/src/: DataBuffer.cpp  DataParser.cpp
processors/: CMakeLists.txt
processors/include/: Analyzer.hpp  BSMExpProcessor.hpp  BSMProcessor.hpp  CutManager.hpp  EventSummary.hpp  GenericAnalyzer.hpp  GenericProcessor.hpp  HagridProcessor.hpp  HistogramManager.hpp  IonizationChamberProcessor.hpp  MtasImplantProcessor.hpp  MtasProcessor.hpp  MtasSSDProcessor.hpp  MtasStruct.hpp  MtasStructLinkDef.hpp  MtasTapeProcessor.hpp  PSPMTProcessor.hpp  PidProcessor.hpp  Processor.hpp  ProcessorList.hpp  PuckProcessor.hpp  RIKENIonizationChamberProcessor.hpp  RIKENPidProcessor.hpp  RootDevProcessor.hpp  RootDevStruct.hpp  RootDevStructLinkDef.hpp  RootFileManager.hpp  VetoProcessor.hpp  WaveformAnalyzer.hpp  YAPProcessor.hpp  e21069bProcessor.hpp  e21069b_fp2Processor.hpp  ribf168Processor.hpp
processors/src/: Analyzer.cpp  BSMExpProcessor.cpp  BSMProcessor.cpp  CutManager.cpp  EventSummary.cpp  GenericAnalyzer.cpp  GenericProcessor.cpp  HagridProcessor.cpp  IonizationChamberProcessors.cpp  MtasImplantProcessor.cpp  MtasProcessor.cpp  MtasSSDProcessor.cpp  MtasTapeProcessor.cpp  PSPMTProcessor.cpp  PidProcessor.cpp  Processor.cpp  ProcessorList.cpp  PuckProcessor.cpp  RIKENIonizationChamberProcessor.cpp  RIKENPidProcessor.cpp  RootDevProcessor.cpp  VetoProcessor.cpp  WaveformAnalyzer.cpp  YAPProcessor.cpp  e21069b_fp2Processor.cpp  ribf168Processor.cpp  ribf168Processors.cpp
translators/: CMakeLists.txt
translators/include/: BitDecoder.hpp  DataParser.hpp  EVTPresortTranslator.hpp  EVTTranslator.hpp  LDFPixieTranslator.hpp  LDFTranslator.hpp  PLDInfo.hpp  Translator.hpp
translators/src/: DataParser.cpp  EVTPresortTranslator.cpp  EVTTranslator.cpp  LDFPixieTranslator.cpp  LDFTranslator.cpp  PLDInfo.cpp  Translator.cpp
utility/: CMakeLists.txt
utility/include/: ArgParser.hpp  ArgValue.hpp  Calibration.hpp  Correction.hpp  CubicCalibration.hpp  CubicExpoCalibration.hpp  GenConfigArgParser.hpp  GenScanorArgParser.hpp  LinearCalibration.hpp  LinearExpoCalibration.hpp  MathFunctions.hpp  PolyCalibration.hpp  PolyExpoCalibration.hpp  PulseFitFunctions.hpp  QuadraticCalibration.hpp  QuadraticExpoCalibration.hpp  StringManipFunctions.hpp
utility/src/: ArgParser.cpp  Calibration.cpp  Correction.cpp  CubicCalibration.cpp  CubicExpoCalibration.cpp  GenConfigArgParser.cpp  GenScanorArgParser.cpp  LinearCalibration.cpp  LinearExpoCalibration.cpp  MathFunctions.cpp  PolyCalibration.cpp  PolyExpoCalibration.cpp  PulseFitFunctions.cpp  QuadraticCalibration.cpp  QuadraticExpoCalibration.cpp  StringManipFunctions.cpp
